--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,23 +17,20 @@ repository = "https://github.com/honesty-box/honestybox-measurement/"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.5, <4"
-validators = "^0.13.0"
-dataclasses = {version = "^0.6.0", python = "^3.6.0"}
-six = "^1.12"
+python = ">=3.7, <4"
+validators = "^0.20"
 speedtest-cli = "^2.1"
-requests = "^2.23.0"
-statistics = "^1.0.3"
-youtube_dl = "^2020.6.16"
-scapy = {version = "^2.4.4-rc.2", allow-prereleases = true}
-bs4 = "^0.0.1"
-[tool.poetry.dev-dependencies]
-pytest = "^3.0"
+requests = "^2.28"
+youtube_dl = "^2021.12.17"
+scapy = "^2.5"
+beautifulsoup4 = "^4.11.2"
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2"
 tox = "^3.13"
 flake8 = "^3.7"
 isort = "^4.3"
-pytest-cov = "^2.7"
-black = {version = "^19.10b0", allow-prereleases = true, python = ">=3.6"}
+pytest-cov = "^4.0"
+black = "^23.1"
 bandit = "^1.6.2"
 
 [tool.tox]
