--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ requests = "^2.28"
 youtube_dl = "^2021.12.17"
 scapy = "^2.5"
 beautifulsoup4 = "^4.11.2"
+click = "^8.1.3"
+exitstatus = "^2.3.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2"
 tox = "^3.13"
