--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ maintainers = [
     "James Stewart <james@amorphitec.io>",
 ]
 packages = [
-    { include = "measurement" },
+    { include = "netmeasure" },
 ]
 repository = "https://github.com/amorphitec/netmeasure"
 readme = "README.md"
@@ -21,11 +21,14 @@ python = ">=3.8, <4"
 validators = "^0.20"
 speedtest-cli = "^2.1"
 requests = "^2.28"
-youtube_dl = "^2021.12.17"
 scapy = "^2.5"
 beautifulsoup4 = "^4.11.2"
 click = "^8.1.3"
 exitstatus = "^2.3.0"
+halo = "^0.0.31"
+click = "^8.1.3"
+rich = "^13.3.2"
+yt-dlp = "^2023.3.4"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2"
 tox = "^3.13"
