--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ speedtest-cli = "^2.1"
 requests = "^2.28"
 scapy = "^2.5"
 beautifulsoup4 = "^4.11.2"
-click = "^8.1.3"
 exitstatus = "^2.3.0"
 halo = "^0.0.31"
 click = "^8.1.3"
@@ -37,6 +36,9 @@ isort = "^4.3"
 pytest-cov = "^4.0"
 black = "^23.1"
 bandit = "^1.6.2"
+
+[tool.poetry.scripts]
+netmeasure = "netmeasure.cli:cli"
 
 [tool.tox]
 legacy_tox_ini = """
