--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,12 +30,12 @@ rich = "^13.3.2"
 yt-dlp = "^2023.3.4"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2"
-tox = "^3.13"
 flake8 = "^3.7"
 isort = "^4.3"
 pytest-cov = "^4.0"
 black = "^23.1"
 bandit = "^1.6.2"
+tox = "^4.4.6"
 
 [tool.poetry.scripts]
 netmeasure = "netmeasure.cli:cli"
@@ -45,14 +45,17 @@ legacy_tox_ini = """
 [tox]
 isolated_build = true
 skipsdist = true
-envlist = py35,py36,py37,py38
+envlist = py38,py39,py310,py311,mypy
 
 [gh-actions]
 python =
     3.5: py35
     3.6: py36
     3.7: py37
-    3.8: py38, mypy
+    3.8: py38
+    3.9: py39
+    3.10: py310
+    3.11: py311, mypy
 
 [testenv]
 whitelist_externals = poetry
@@ -61,6 +64,5 @@ commands =
     poetry run pytest --cov
 """
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.3"]
 build-backend = "poetry.masonry.api"
-
