--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ python =
     3.11: py311, mypy
 
 [testenv]
-whitelist_externals = poetry
+allowlist_externals = poetry
 commands =
     poetry install -v
     poetry run pytest --cov
