--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,14 +45,14 @@ legacy_tox_ini = """
 [tox]
 isolated_build = true
 skipsdist = true
-envlist = py38,py39,py310,py311,mypy
+envlist = py38,py39,py310,py311
 
 [gh-actions]
 python =
     3.8: py38
     3.9: py39
     3.10: py310
-    3.11: py311, mypy
+    3.11: py311
 
 [testenv]
 allowlist_externals = poetry
