--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "netmeasure"
-version = "1.2.4"
-description = "A tool for measuring Internet connection quality in a structured way."
+version = "1.2.5"
+description = "Measure Internet connection quality."
 authors = [
     "James Stewart <james@amorphitec.io>",
     "Stuart Dines <me@stuartdines.com>",
